2003-12-06  Yuuichi Teranishi  <teranisi@gohome.org>

	* mime-play.el 	(mime-require-safe-directory): New function.
	(mime-store-message/partial-piece): Use it.

2003-12-05  Katsumi Yamaoka  <yamaoka@jpl.org>

	* mime-play.el (mime-store-message/partial-piece): Fix
	mis-designed parenthesis in the `let' form.

2001-11-27  Daiki Ueno  <ueno@unixuser.org>

	* mime-w3.el: Don't use `url-register-protocol' if it is not
	fboundp; announce `url-cid' feature instead.
	[cf. <Wanderlust:8566>]

	(url-cid): Change return value for the current URL package.

2003-06-09  Yuuichi Teranishi  <teranisi@gohome.org>

	* pgg-gpg.el (pgg-gpg-process-region): Undo the last change;
	Add --yes option to overwrite existing output file;
	Remove needless set-default-file-modes.

2003-05-29  Yuuichi Teranishi  <teranisi@gohome.org>

	* pgg-gpg.el (pgg-gpg-process-region): Undo the last change.

2003-05-15  Yuuichi Teranishi  <teranisi@gohome.org>

	* pgg-gpg.el (pgg-gpg-process-region): Use `make-temp-file' instead of
	`make-temp-name'.

	* pgg-pgp5.el (pgg-pgp5-process-region): Ditto.
	(pgg-scheme-verify-region): Ditto.
	(pgg-scheme-snarf-keys-region): Ditto.

	* pgg-pgp.el (pgg-pgp-process-region): Ditto.
	(pgg-scheme-verify-region): Ditto.
	(pgg-scheme-snarf-keys-region): Ditto.

	* smime.el (smime-process-region): Ditto.
	(smime-verify-region): Ditto.

	* mime-pgp.el (mime-verify-application/pgp-signature): Ditto.
	(mime-verify-application/pkcs7-signature): Ditto.

	* mime-play.el (mime-activate-mailcap-method): Make a temporary
	directory of a temporary file for the mailcap application.
	(mime-mailcap-method-sentinel): Follow the change above.
	(mime-store-message/partial-piece): Set `default-file-modes' for
	`make-directory'.

	* mime-edit.el (mime-edit-split-and-send): Remove local variable
	`mime-edit-draft-file-name'.

2003-05-12  Yoichi NAKAYAMA  <yoichi@geiin.org>

	* mime-edit.el (turn-on-mime-edit): Protect 1st arg of `message'.